# rs-algo-screener

./: .gitignore  Cargo.toml  README.md  deploy.sh  playbook.yml  regenerate.sh  sonar-project.properties
data/: AAPL.csv  CRWD.csv  KAR.csv  NDQ2.csv  (+5 more)
rs_algo_backend/: Cargo.toml  Dockerfile  fonts.conf
rs_algo_backend/chart/: Chart.yaml  config.yaml  secrets.yaml  values.yaml
rs_algo_backend/chart/templates/: hpa.yaml  service.yaml
rs_algo_backend/deployment/chart/: config.yaml  values.yaml
rs_algo_backend/deployment/chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
rs_algo_backend/deployment/roles/tasks/: main.yml
rs_algo_backend/deployment/roles/vars/: main.yml
rs_algo_backend/roles/deploy/vars/: main.yml
rs_algo_backend/src/: backend.rs  error.rs  main.rs  render_chart.rs  render_image.rs
rs_algo_backend/src/db/: back_test.rs  bot.rs  helpers.rs  instrument.rs  mod.rs  mongo.rs  portfolio.rs  watch_list.rs
rs_algo_backend/src/errors/: json_error.rs  mod.rs
rs_algo_backend/src/handlers/: index.rs  instrument.rs
rs_algo_backend/src/helpers/: mod.rs
rs_algo_backend/src/middleware/: auth.rs  cors.rs  logger.rs  mod.rs
rs_algo_backend/src/models/: app_state.rs  backtest_instrument.rs  db.rs  instrument.rs  mod.rs
rs_algo_backend/src/services/: back_test.rs  bot.rs  instrument.rs  mock.rs  mod.rs  portfolio.rs  watch_list.rs
rs_algo_backend/src/strategies/: general.rs  mod.rs  pattern_status.rs  stoch.rs
rs_algo_backtest/: Cargo.toml  Dockerfile
rs_algo_backtest/deployment/chart/: config.yaml  values.yaml
rs_algo_backtest/deployment/crypto/chart/: config.yaml  values.yaml
rs_algo_backtest/deployment/forex/chart/: Chart.yaml  config.yaml  values.yaml
rs_algo_backtest/deployment/roles/vars/: main.yml
rs_algo_backtest/deployment/stock/chart/: config.yaml  values.yaml
rs_algo_backtest/mocks/: backtest_pricing.json
rs_algo_backtest/src/: main.rs  portfolio.rs  trade.rs
rs_algo_backtest/src/helpers/: backtest.rs  calc.rs  mod.rs
rs_algo_backtest/src/strategies/: bollinger_bands.rs  bollinger_bands_middle_band.rs  bollinger_bands_reversal.rs  bollinger_bands_reversal_2.rs  bollinger_bands_reversal_continuation.rs  bollinger_bands_reversal_continuation_ls.rs  bollinger_bands_reversal_filter.rs  bollinger_bands_reversal_ls.rs  bollinger_bands_reversal_riding.rs  bollinger_bands_reversal_riding_band_width.rs  bollinger_bands_reversal_riding_rsi.rs  bollinger_bands_reversal_riding_rsi_ls.rs  bollinger_bands_reversals.rs  bollinger_bands_reversals2_mt_macd.rs  bollinger_bands_reversals_continuation_ls_mt_macd.rs  bollinger_bands_reversals_continuation_mt_macd.rs  bollinger_bands_reversals_mt_macd.rs  bollinger_bands_riding_bands.rs  ema.rs  ema_200.rs  ema_200_ls.rs  ema_50.rs  ema_50200.rs  ema_50200_ls.rs  ema_50200_ls_mt_macd.rs  ema_scalping.rs  ema_scalping2.rs  macd.rs  macd_dual.rs  macd_over_zero.rs  macd_rsi.rs  macd_weekly.rs  mean_reversion.rs  mod.rs  multi_timeframe.rs  num_bars.rs  num_bars_atr.rs  rsi.rs  scalping.rs  stoch.rs  (+4 more)
rs_algo_bot/: Cargo.toml  Dockerfile
rs_algo_bot/src/: main.rs
rs_algo_client/: .htpasswd  Cargo.toml  Dockerfile  Trunk.toml  health.html  index.html  manifest.json  nginx.conf  service_worker.js
rs_algo_client/deployment/chart/: Chart.yaml  config.yaml  values.yaml
rs_algo_client/deployment/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
rs_algo_client/deployment/roles/vars/: main.yml
rs_algo_client/src/: main.rs  routes.rs
rs_algo_client/src/components/: chart.rs  footer.rs  header.rs  instruments_list.rs  loading.rs  mod.rs  plotter.rs  strategy_detail.rs
rs_algo_client/src/helpers/: status.rs
rs_algo_client/src/pages/: api.rs  home.rs  mod.rs
rs_algo_client/src/pages/bots/: api.rs  mod.rs  page.rs
rs_algo_client/src/pages/home/: api.rs  instruments_list.rs  page.rs
rs_algo_client/src/pages/strategies/: api.rs  page.rs
rs_algo_client/src/pages/strategy/: api.rs  page.rs
rs_algo_scanner/: Cargo.toml  Dockerfile
rs_algo_scanner/deployment/backtest/chart/: Chart.yaml  config.yaml  values.yaml
rs_algo_scanner/deployment/chart/: config.yaml  values.yaml
rs_algo_scanner/deployment/daily/chart/: config.yaml  values.yaml
rs_algo_scanner/deployment/roles/vars/: main.yml
rs_algo_scanner/src/: backend.rs  candle.rs  error.rs  instrument.rs  main.rs  prices.rs  screener.rs
rs_algo_scanner/src/broker/: mod.rs  sp500.rs  xtb.rs
rs_algo_scanner/src/helpers/: comp.rs  maxima_minima.rs  mod.rs  poly.rs  regression.rs  slope_intercept.rs
rs_algo_scanner/src/indicators/: adx.rs  atr.rs  bb.rs  bbw.rs  ema.rs  kc.rs  macd.rs  mfi.rs  mod.rs  rsi.rs  sd.rs  stoch.rs  tema.rs
rs_algo_scanner/src/patterns/: broadening.rs  channel.rs  divergences.rs  double.rs  head_shoulders.rs  highs_lows.rs  horizontal_levels.rs  mod.rs  pattern.rs  peaks.rs  rectangle.rs  triangle.rs  upper_channel.rs
rs_algo_screener/: Cargo.toml  Dockerfile
rs_algo_screener/chart/: Chart.yaml  config.yaml  values.yaml
rs_algo_screener/chart/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
rs_algo_screener/deployment/chart/: config.yaml  values.yaml
rs_algo_screener/src/: backend.rs  candle.rs  error.rs  instrument.rs  main.rs  prices.rs  screener.rs
rs_algo_screener/src/broker/: mod.rs  xtb.rs
rs_algo_screener/src/helpers/: comp.rs  date.rs  http.rs  maxima_minima.rs  mod.rs  poly.rs  regression.rs
rs_algo_screener/src/indicators/: ema.rs  macd.rs  mod.rs  stoch.rs
rs_algo_screener/src/patterns/: broadening.rs  channel.rs  divergences.rs  double.rs  highs_lows.rs  horizontal_levels.rs  mod.rs  pattern.rs  peaks.rs  rectangle.rs  triangle.rs
rs_algo_ws_server/: Cargo copy.toml  Cargo.toml  Dockerfile
rs_algo_ws_server/deployment/chart/: config.yaml
rs_algo_ws_server/src/: main.rs  message.rs  server.rs  session.rs
rs_algo_ws_server/src/services/: mod.rs  ws.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
(+131 files in other folders)
