[package]
name = "rs_algo_screener"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.50"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
dotenv = "0.15.0"
plotters = {version = "0.3.1", features = ["all_series"]}
find_peaks="0.1.2"
polyfit-rs="0.2"
horner = "0.2.2"
ta = "0.5.0"
chrono = "0.4.19"
async-trait = "0.1.52"
futures = "0.3.19"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
