[package]
name = "rs_algo_backend"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-cors = "0.6.1"
actix-files = "0.6.0"
anyhow = "1.0.57"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = {version = "0.4.19",  features = ["serde"] }
dotenv = "0.15.0"
bson = "2.2.0"
futures = "0.3.21"
env_logger = "0.9.0"
round = "0.1.2"
async-trait = "0.1.53"
mongodb = "2.1.0"
openssl = { version = "0.10.38", features = ["vendored"] }

plotters = {git = "https://github.com/pmagaz/plotters", features = ["all_series"]}
rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", rev = "82da575"} 

