[package]
name = "rs_algo_backend"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-http = "3.4.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.75"
thiserror = "1.0.47"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chrono = {version = "0.4.26",  features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4"
round = "0.1.2"
async-trait = "0.1.73"
mongodb = "2.2.2"
bson = "2.3.0"
openssl = { version = "0.10.57", features = ["vendored"] }
plotters = {git = "https://github.com/pmagaz/plotters", features = ["all_series"]}
rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", rev = "7bde43f"}

#rs_algo_shared = { path = "../../rs_algo_shared" }

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1