[package]
name = "rs_algo_backtest"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_qs = "0.12.0"
dotenv = "0.15.0"
chrono = {version = "0.4.26",  features = ["serde"] }
async-trait = "0.1.73"
round = "0.1.2"
futures = "0.3.28"
openssl = { version = "0.10.57", features = ["vendored"] }
dyn-clone = "1.0.13"
env_logger = "0.10.0"
log = "0.4"

rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", rev = "7bde43f"}
#rs_algo_shared = { path = "../../rs_algo_shared" }
# [profile.release]
# strip = true
# lto = true
# codegen-units = 1