[package]
name = "rs_algo_bot"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.58"
actix = "0.13.0"
thiserror = "1.0.31"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_qs = "0.10.1"
dotenv = "0.15.0"
chrono = {version = "0.4.19",  features = ["serde"] }
async-trait = "0.1.52"
round = "0.1.2"
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4"

rs_algo_shared = { path = "../../rs_algo_shared", features = ["websocket"] }
#rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", features = ["broker","websocket"], rev="aa8fdaa"}