[package]
name = "rs_algo_client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"
log = "0.4"
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
dotenv = "0.15.0"
rs_algo_shared = { git = "https://github.com/pmagaz/rs_algo_shared", rev = "2e211b0"}
reqwest = { version = "0.11.9", features = ["json"] }