[package]
name = "rs_algo_client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4.29"
log = "0.4"
web-sys= { version= "0.3.56", features = ["Window", "Document", "Element", "HtmlElement", "HtmlFormElement", "HtmlInputElement", "Node"]}
serde_json = "1.0.79"
serde = {version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
round = "0.1.2"
dotenv = "0.15.0"
reqwest = { version = "0.11.9", features = ["json"] }
uuid = { version = "0.8.2", features = ["wasm-bindgen"] }
rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", rev = "82da575"} 