[package]
name = "rs_algo_scanner"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.58"
thiserror = "1.0.31"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_qs = "0.10.1"
dotenv = "0.15.0"
find_peaks = "0.1.5"
polyfit-rs="0.2.0"
chrono = {version = "0.4.19",  features = ["serde"] }
round = "0.1.2"
libm ="0.2.2"
reqwest = { version = "0.11.11", features = ["json"] }

ta = {git = "https://github.com/pmagaz/ta-rs", features = ["serde"]}
plotters = {git = "https://github.com/pmagaz/plotters", features = ["all_series"]}
rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", features = ["broker"], rev = "fbe605c"}