[package]
name = "rs_algo_screener"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.15", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
dotenv = "0.15"
plotters = {version = "0.3", features = ["all_series"]}
find_peaks="0.1"
polyfit-rs="0.2"
horner = "0.2"
ta = "0.5"
chrono = "0.4"
async-trait = "0.1"
futures = "0.3"
tungstenite = {version = "0.16", features = ["native-tls"]}
friedrich = "0.4"