[package]
name = "shared"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_qs = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }